# givio

./: .gitignore  CMakeLists.txt  GivIO.cpp  GivIO.h  GivIO.pc.in  README.md  ReadMe.md  test-givio.cpp
python/: GivIO.py  README.md  example.py  rect.giv  setup.py
